# rgoshm

./: README.md  go.mod
cpp_sdk/: CMakeLists.txt
cpp_sdk/src/: first.cpp  first.h  main.cpp  rgoshm.cpp  rgoshm.h  second.cpp  second.h  shared_data.h  systemV_semaphore.cpp  xsi_shared.cpp
go_sdk/: go.mod  go_sdk  main.go  posix_shm.go
go_sdk/semaphore/: posix_semaphore.go  posix_semaphore_test.go
go_sdk/shm/: posix_shm.go
lib/: hello.h  libhello.dylib  rgoshm.h
lib/hello/: Cargo.toml
lib/hello/src/: lib.rs
php_sdk/: .gitignore  generated.json  receive.php  shared_mem.php
